Fixed web content overlapping navbar

--- a/Frontend/public/css/styles.css
+++ b/Frontend/public/css/styles.css
@@ -67,6 +67,13 @@ hr {
     margin: 5%;
 }
 
+/*
+body {
+    background-color: #252423;
+    color: ivory;
+}
+*/
+
 
 .main_logo {
     height: 6em;
@@ -303,8 +310,9 @@ a:link{
 }
 
 #body_content {
-    width: 100%;
-    height: 100%;
+    margin: 1%;
+    width: 99%;
+    height: 99%;
 
     border: 0px;
 }
